✨🔧⬆️ Build hardening: reproducible archives, toolchain policy, and resolution; upgrade wrapper and catalogs
* Introduce `java.lts` and helper APIs to align Java/Kotlin toolchains; pin Kotlin bytecode to **JVM 21** and warn when Gradle JVM < 21.
* Enforce deterministic archives: disable timestamps, stable file order, no empty dirs, fail on duplicates; enable ZIP64 for Jar/Zip; normalize TAR POSIX perms; strip variable manifest fields; add Javadoc `-notimestamp`.
* Tighten settings: `FAIL_ON_PROJECT_REPOS`, repository content filter, Foojay resolver version sourced from `version.foojay.resolver`; enable local build cache and type‑safe project accessors.
* Add and configure `nl.littlerobots.version-catalog-update` (sorted, stable-only, keep unused versions).
* Upgrade Gradle wrapper to **8.14.3**.
* Refresh versions/catalog: Kotlin **2.2.20‑Beta2**, Kotest **6.0.0.M8**, Arrow **2.1.2**, binary‑compat **0.18.1**; add Dokka plugin.
* Extend `gradle.properties` with `java.lts=21`, `keen.java.default=22`, and `version.foojay.resolver=1.0.0`.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,8 @@ org.gradle.warning.mode=all
 
 # Enable Kotlin compiler optimizations
 kotlin.incremental=true
+
+java.lts=21
+keen.java.default=22
+
+version.foojay.resolver=1.0.0
