🏗️📦♻️🔧 Introduce central BOM, enforce explicit API, and refactor JVM convention
* **Add `:dependency-constraints` BOM** (`java-platform`) and include it in the build; import it via `platform(projects.dependencyConstraints)` from `core`, `examples`, and `benchmark` to align Arrow (and future) versions.
* **Enforce explicit API in `:benchmark`**: enable `kotlin.explicitApi()` and mark public declarations with explicit visibility and return types (`rosenbrock*`, `sphere*`).
* **Refactor `keen.jvm` convention plugin**:

  * Resolve toolchains via providers (`providers.resolveDefaultJavaVersion()`), apply to Java & Kotlin.
  * Derive Kotlin `jvmTarget` from the requested Java version (17→22 mapping).
  * Opt into experimental APIs, enable `-Xcontext-parameters`, and support `-Pkotlin.warningsAsErrors`.
* **Simplify toolchain utils**: replace `JvmToolchain` object with lightweight provider‑based extensions `setDefaultJavaVersion(providers)` for both Java and Kotlin; keep lazy property resolver; drop logging/validation boilerplate.
* **Improve `:examples` run ergonomics**:

  * Apply `application` and Detekt, wire BOM.
  * Make `run` task property‑driven (`-PexampleMain`, `-PexampleArgs`, `-PexampleJvmArgs`) using **serializable** argument providers; disable task when no main is set.
* **Build config & quality**:

  * Apply `keen.library`, `keen.jvm`, and Detekt (with formatting rules) consistently.
  * Update `gradle.properties` with configuration cache, caching/parallelism, daemon JVM args, `keen.java.default`, `java.lts`, `kotlin.warningsAsErrors`, and test knobs.
  * Update `settings.gradle.kts` to include the new `:dependency-constraints` project.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,83 @@
-# Enable Gradle optimizations
+# =========================================================================================
+# gradle.properties - Build-wide defaults and performance knobs
+# -----------------------------------------------------------------------------------------
+# This file centralizes flags that affect all Gradle invocations (CLI and IDE).
+# Values here are safe defaults; override per-machine with ~/.gradle/gradle.properties
+# or per-run with command-line -P / -D flags.
+# =========================================================================================
+
+# -----------------------
+# Core Gradle performance
+# -----------------------
+
+# Enable Gradle's configuration cache to reuse the configuration phase between runs.
+# NOTE: Not all tasks/plugins are CC-compatible; Gradle will report offenders.
+# Temporarily disable with: --no-configuration-cache
 org.gradle.configuration-cache=true
+
+# Allow Gradle to execute independent tasks in parallel (multi-module builds benefit).
 org.gradle.parallel=true
+
+# Enable the build cache (local by default). Improves incremental rebuild times.
 org.gradle.caching=true
 
-# Increase JVM heap size and use parallel GC for faster builds
+# -------------------------
+# JVM for the Gradle daemon
+# -------------------------
+
+# JVM args used by the Gradle *daemon* (not your application/tests).
+# -Xmx4g: heap cap; raise/lower for your machine/CI size
+# -XX:+UseParallelGC: throughput-oriented GC; G1 is the default in recent JDKs; Parallel can be faster on big heaps
+# -Dfile.encoding=UTF-8: consistent default encoding across platforms
 org.gradle.jvmargs=-Xmx4g -XX:+UseParallelGC -Dfile.encoding=UTF-8
 
-# Show all warnings during build (good for early-stage projects)
+# ----------------------
+# Diagnostics & warnings
+# ----------------------
+
+# Show all Gradle deprecation and plugin warnings.
+# Options: all | summary | none
 org.gradle.warning.mode=all
 
-# Enable Kotlin compiler optimizations
+# ---------------------------------------
+# Kotlin compiler defaults (project-wide)
+# ---------------------------------------
+
+# Incremental compilation reduces rebuild times (on by default in modern Kotlin).
 kotlin.incremental=true
 
+# Treat compiler warnings as errors when true.
+# Can be toggled per-run: -Pkotlin.warningsAsErrors=true
+kotlin.warningsAsErrors=false
+
+# ----------------------------------------------------
+# Toolchain selection (consumed by convention plugins)
+# ----------------------------------------------------
+
+# Used for the Gradle build itself.
 java.lts=21
+
+# Default JDK for toolchains in the build.
 keen.java.default=22
 
+# ------------------------------------------------------------------
+# Settings plugin versions (settings.gradle.kts -> pluginManagement)
+# ------------------------------------------------------------------
+
+# Version of the Foojay resolver used by settings to auto-provision JDKs for toolchains.
 version.foojay.resolver=1.0.0
 
+# -------------------------------------------------------
+# Test conventions (consumed by keen.library test plugin)
+# -------------------------------------------------------
+
+# Print stdout/stderr from tests (off by default to keep logs tidy).
 test.showStandardStreams=false
+
+# Max parallel forks for Test tasks.
+# The default is `min(available processors, 8)`; set explicitly here if needed.
 test.maxParallelForks=4
+
+# Fork a new JVM after N tests (0 = do not fork per-N).
+# Useful to mitigate memory leaks in very large suites.
 test.forkEvery=0
