🧪♻️ Replace Kotest bundle with unified testing suite & add `Problem` tests
Refactored Gradle dependencies to use a consolidated `testing` bundle (including MockK & Kotest extensions) instead of the old `kotest` bundle.
Added comprehensive property-based tests for `Problem` creation and behavior, plus Gradle configuration changes to support MockK dynamic agent loading.

--- a/gradle.properties
+++ b/gradle.properties
@@ -81,3 +81,6 @@ test.maxParallelForks=4
 # Fork a new JVM after N tests (0 = do not fork per-N).
 # Useful to mitigate memory leaks in very large suites.
 test.forkEvery=0
+
+# allow dynamic agents for test forks (MockK)
+test.jvmArgs=-XX:+EnableDynamicAgentLoading
