🚀🔧 Improve Java toolchain handling and vector API support
- Replace `java.lts` with `keen.java.default` as the canonical property
- Add consistency check task (`verifyKeenJavaDefault`) across root and build-logic
- Default Kotlin `jvmTarget` to resolved Java version instead of fixed 21
- Extract testing conventions into new `keen.testing` plugin
- Introduce utility helpers:
  - `JvmTargets.kt` for safe Java→Kotlin target mapping
  - `VersionCatalog.kt` wrapper
  - Enhanced `JvmToolchain.kt` with validation & logging
- Update `keen.jvm` plugin to support incubator modules (jdk.incubator.vector)
- Rename `DotProductImpl` → `VectorizedDotProduct` and update usages
- Add `VectorApiSmokeTest` to verify `jdk.incubator.vector` presence
- Update Gradle properties to use `keen.java.default=21` with vector module JVM arg

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,16 +10,8 @@
 # Core Gradle performance
 # -----------------------
 
-# Enable Gradle's configuration cache to reuse the configuration phase between runs.
-# NOTE: Not all tasks/plugins are CC-compatible; Gradle will report offenders.
-# Temporarily disable with: --no-configuration-cache
-org.gradle.configuration-cache=true
-
 # Allow Gradle to execute independent tasks in parallel (multi-module builds benefit).
 org.gradle.parallel=true
-
-# Enable the build cache (local by default). Improves incremental rebuild times.
-org.gradle.caching=true
 
 # -------------------------
 # JVM for the Gradle daemon
@@ -54,11 +46,9 @@ kotlin.warningsAsErrors=false
 # Toolchain selection (consumed by convention plugins)
 # ----------------------------------------------------
 
-# Used for the Gradle build itself.
-java.lts=21
-
 # Default JDK for toolchains in the build.
-keen.java.default=24
+# As of Detekt 1.23.8, 22 is the latest supported version.
+keen.java.default=21
 
 # ------------------------------------------------------------------
 # Settings plugin versions (settings.gradle.kts -> pluginManagement)
@@ -83,4 +73,4 @@ test.maxParallelForks=4
 test.forkEvery=0
 
 # allow dynamic agents for test forks (MockK)
-test.jvmArgs=-XX:+EnableDynamicAgentLoading
+test.jvmArgs=-XX:+EnableDynamicAgentLoading --add-modules=jdk.incubator.vector
