✨🔧 Add Java version consistency check task & restructure build logic
* Fixed Gradle Kotlin DSL usage for `JvmTarget` and `-Xjavac-arguments`
* Introduced `VerifyKeenJavaDefaultTask` to enforce `keen.java.default` consistency across root and build-logic
* Refactored root `build.gradle.kts` with clearer regions, CI-friendly linting, dependency hygiene, and Kover defaults
* Enabled Gradle config cache and build cache in `gradle.properties`
* Added **Doctor** plugin to `libs.versions.toml` and plugin set
* Major API evolution in `core`:

  * Removed `OptimizationEngine` & `SimpleHillClimber`
  * Added `Problem`, `Objective`, `Constraint` hierarchy
  * Introduced `Gradient`, `Solution`, and size-safe utilities
  * Defined domain-specific exceptions for gradients, thresholds, and sizes
* Added new `utils/math` module API for JVM vector/matrix operations with FMA, dot products, and L2 norm

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,16 @@
 # Core Gradle performance
 # -----------------------
 
+# Enable Gradle's configuration cache to reuse the configuration phase between runs.
+# NOTE: Not all tasks/plugins are CC-compatible; Gradle will report offenders.
+# Temporarily disable with: --no-configuration-cache
+org.gradle.configuration-cache=true
+
 # Allow Gradle to execute independent tasks in parallel (multi-module builds benefit).
 org.gradle.parallel=true
+
+# Enable the build cache (local by default). Improves incremental rebuild times.
+org.gradle.caching=true
 
 # -------------------------
 # JVM for the Gradle daemon
