✨ 🔧 Rename the project from KEEN-OP to KNOB
* Updated project name in `README.md`, Gradle properties, and settings
* Renamed `VerifyKeenJavaDefaultTask` → `VerifyKnobJavaDefaultTask`
* Replaced all `keen.java.default` property references with `knob.java.default`
* Adjusted root project name (`keen-core` → `knob-core`)
* Updated clone/build instructions in documentation

--- a/build-logic/gradle.properties
+++ b/build-logic/gradle.properties
@@ -9,4 +9,4 @@
 
 # Default JDK for toolchains in the build.
 # As of Detekt 1.23.8, 22 is the latest supported version.
-keen.java.default=21
+knob.java.default=21
