--- a/gradle.properties
+++ b/gradle.properties
@@ -56,7 +56,7 @@ kotlin.warningsAsErrors=false
 
 # Default JDK for toolchains in the build.
 # As of Detekt 1.23.8, 22 is the latest supported version.
-keen.java.default=21
+knob.java.default=21
 
 # ------------------------------------------------------------------
 # Settings plugin versions (settings.gradle.kts -> pluginManagement)
@@ -66,7 +66,7 @@ keen.java.default=21
 version.foojay.resolver=1.0.0
 
 # -------------------------------------------------------
-# Test conventions (consumed by keen.library test plugin)
+# Test conventions (consumed by knob.library test plugin)
 # -------------------------------------------------------
 
 # Print stdout/stderr from tests (off by default to keep logs tidy).
