:rocket: chore(ci): add and fix GitLab CI configuration
- Add `.gitlab-ci.yml` with stages: `quality` (lint), `verify` (build + kover), and `maintenance` (dependencyMaintenance).
- Publish Detekt reports, JUnit test reports and Kover coverage artifacts for MRs and branch pipelines.
- Fix YAML glob quoting and artifact path parsing so the CI config validates.
- Default to Eclipse Temurin JDK 21 image and reuse project Gradle wrapper; caches Gradle directories for faster runs.
- Add a manual `dependency_maintenance` job limited to `main`/tag events.
- Notes: pipeline is conservative (interruptible, non-daemon Gradle) — adjust memory or job matrix for heavy CI runners if needed.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ lint:
     when: always
     paths:
       - build/reports/detekt
-      - */build/reports/detekt
+      - "*/build/reports/detekt"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: '$CI_COMMIT_BRANCH'
@@ -48,13 +48,13 @@ verify:
     when: always
     reports:
       junit:
-        - **/build/test-results/test/*.xml
+        - "**/build/test-results/test/*.xml"
       coverage_report:
         coverage_format: cobertura
         path: build/reports/kover/xml/report.xml
     paths:
       - build/reports/kover
-      - */build/reports/kover
+      - "*/build/reports/kover"
     expire_in: 1 week
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
