--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ stages:
   - quality
   - verify
   - maintenance
+  - release
 
 lint:
   stage: quality
@@ -72,3 +73,17 @@ dependency_maintenance:
       when: manual
     - when: never
   allow_failure: true
+
+release:
+  stage: release
+  script:
+    - ./gradlew assemble
+  only:
+    - tags
+  artifacts:
+    when: on_success
+    paths:
+      - build/libs
+    expire_in: 1 week
+  rules:
+    - if: '$CI_COMMIT_TAG'
