--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ org.gradle.warning.mode=all
 
 # Enable Kotlin compiler optimizations
 kotlin.incremental=true
+
+# Plugin versions
+plugin.foojay-resolver.version=1.0.0
