⬆️ chore(deps): update version catalog, add concise update doc, and tidy tasks
- Update `gradle/libs.versions.toml`: bump ben-manes and VCU, reorganize plugin ids
- Adjust `build.gradle.kts`: wire version-catalog-update and ben-manes tasks, simplify configuration
- Add concise `dev-resources/DEPENDENCY_UPDATE.md` with gitmoji+conventional commit example
- Remove old `keen.*` precompiled plugin scripts and obsolete wrapper metadata
- Stage and commit current changes for review

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,33 +1,37 @@
 [versions]
-kotlin = "2.2.0-RC"
-kotlin-bin-compatibility-validator = "0.17.0"
+ben-manes-versions = "0.53.0"
 detekt = "1.23.8"
-kotest = "6.0.0.M4"
+kotest = "6.0.4"
 kotest-framework-datatest = "5.9.1"
-ben-manes-versions = "0.52.0"
-version-catalog-update = "1.0.0"
+kotlin = "2.3.0-Beta1"
+kotlin-bin-compatibility-validator = "0.18.1"
+version-catalog-update = "1.0.1"
 
 [libraries]
-# Core Kotlin Gradle plugin (required for all Kotlin projects)
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-
 # Optional formatting plugin for Detekt (requires detekt CLI/tooling)
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest-framework-datatest" }
 kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
 kotest-property = { module = "io.kotest:kotest-property", version.ref = "kotest" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
+# Core Kotlin Gradle plugin (required for all Kotlin projects)
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 
 [plugins]
-# Plugin to check binary compatibility of public APIs
-kotlin-bin-compatibility = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "kotlin-bin-compatibility-validator" }
-
+ben-manes-versions = { id = "com.github.ben-manes.versions", version.ref = "ben-manes-versions" }
+dependency-updates = { id = "com.github.ben-manes.versions", version.ref = "ben-manes-versions" }
 # Static analysis plugin for Kotlin codebases
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
-dependency-updates = { id = "com.github.ben-manes.versions", version.ref = "ben-manes-versions" }
+# Plugin to check binary compatibility of public APIs
+kotlin-bin-compatibility = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "kotlin-bin-compatibility-validator" }
 version-catalog-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "version-catalog-update" }
 
 [bundles]
-kotest = ["kotest-assertions-core", "kotest-framework-datatest", "kotest-framework-engine", "kotest-property", "kotest-runner-junit5"]
+kotest = [
+    "kotest-assertions-core",
+    "kotest-framework-datatest",
+    "kotest-framework-engine",
+    "kotest-property",
+    "kotest-runner-junit5",
+]
