--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Windows batch scripts use CRLF
 *.bat           text eol=crlf
+*.ps1           text eol=crlf
 
 # Binary files should be left untouched
 *.jar           binary
@@ -25,5 +26,7 @@
 *.yaml          text eol=lf
 *.json          text eol=lf
 *.xml           text eol=lf
+*.sh            text eol=lf
 *.gitignore     text eol=lf
 *.gitattributes text eol=lf
+*.api           text eol=lf
