✨ feat: enhance contribution guidelines, update README for preflight checks, and add platform module with BOM support

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ kotlin.incremental=true
 
 # Plugin versions
 plugin.foojay-resolver.version=1.0.0
+
+# Maven publishing coordinates
+group=cl.ravenhill.kalm
+version=0.1.0-SNAPSHOT
