--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ plugin.foojay-resolver.version=1.0.0
 
 # Maven publishing coordinates
 group=cl.ravenhill.kalm
-version=0.1.0-SNAPSHOT
+version=0.1.0
