🔒🔧 chore(gradle): enforce strict dependency locking and regenerate locks
- Add `kalm.dependency-locking` convention plugin and apply to JVM modules
- Enable `LockMode.STRICT` and `lockAllConfigurations()` for reproducible builds
- Regenerate `core/gradle.lockfile` and update `core/api/core.api`
- Replace deprecated Detekt config setter with `config.from(...)`
- Add `dev-resources/DEPENDENCY_LOCKING.md` and link from README
- Make provider-safe version-catalog lookups and enable typesafe accessors preview
- Run preflight and `--write-locks` to persist missing lock states

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ version-catalog-update = "1.0.1"
 [libraries]
 # Optional formatting plugin for Detekt (requires detekt CLI/tooling)
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+detekt-gradle-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest-framework-datatest" }
 kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
