--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 !**/settings.gradle.kts
 !**/gradle.properties
 
+# Allow functionalTest fixture build outputs from build-logic to be tracked when needed
+!build-logic/src/functionalTest/build/
+!build-logic/src/functionalTest/build/**
+
 # === IntelliJ IDEA ===
 .idea/
 *.iml
