🔧 ♻️ build: centralize foojay-resolver version and add sync task
- Centralize foojay-resolver version using version catalog
- Add build-logic/gradle.properties and sync task to mirror catalog
- Update docs and scripts to require JDK 22+ for build-logic

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ org.gradle.warning.mode=all
 kotlin.incremental=true
 
 # Plugin versions
+# Mirrors the libs catalog entry `foojay-resolver`; keep it synced via `:syncVersionProperties`.
 plugin.foojay-resolver.version=1.0.0
 
 # Maven publishing coordinates
