🔧 ✨ build(gradle): centralize plugin and toolchain versions
- Move plugin versions (ben-manes, detekt-redmadrobot) into version catalog
- Update build-logic to use catalog references for plugins
- Add uildlogic.java.version to root and build-logic gradle.properties (default 22)
- Read property at execution time and use for toolchain configuration
- Update docs and sync tasks to reflect centralization

--- a/build-logic/gradle.properties
+++ b/build-logic/gradle.properties
@@ -4,3 +4,7 @@
 # Plugin versions
 # Mirrors the libs catalog entry `foojay-resolver`; keep it synced via `:syncVersionProperties`.
 plugin.foojay-resolver.version=1.0.0
+
+# Build-logic defaults
+# Default Java language version used by build logic (can be overridden per-machine/CI)
+buildlogic.java.version=22
