--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ plugin.foojay-resolver.version=1.0.0
 # Maven publishing coordinates
 group=cl.ravenhill.kalm
 version=0.1.0
+
+# Build-logic defaults
+# Default Java language version used by build logic (can be overridden per-machine/CI)
+buildlogic.java.version=22
