--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,8 @@ org.gradle.parallel=true
 org.gradle.caching=true
 
 # Increase JVM heap size and use parallel GC for faster builds
-org.gradle.jvmargs=-Xmx4g -XX:+UseParallelGC -Dfile.encoding=UTF-8
+# Reserve more CodeCache to avoid "Out of space in CodeCache" during complex builds
+org.gradle.jvmargs=-Xmx4g -XX:+UseParallelGC -XX:ReservedCodeCacheSize=512m -Dfile.encoding=UTF-8
 
 # Show all warnings during build (good for early-stage projects)
 org.gradle.warning.mode=all
