--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   kalm:
     <<: &kalm-base
       build:
+        # Build context: the directory sent to the Docker daemon for the build.
+        # Files under this path are available to the Dockerfile (e.g. via COPY/ADD).
+        # Using `.` sends the repository root so the Dockerfile can access repo files.
         context: .
         dockerfile: Dockerfile
       image: kalm-env:local
@@ -25,7 +28,7 @@ services:
       - gradle
     volumes:
       - .:/workspace:cached
-      - gradle-cache:/root/.gradle
+      - gradle-cache:/gradle-cache
     working_dir: /workspace
     # Override entrypoint to run gradle directly
     entrypoint: ./gradlew
@@ -36,8 +39,8 @@ services:
     <<: *kalm-base
     profiles:
       - pester
-    # Override entrypoint to run Pester
-    entrypoint: ./scripts/testing/Invoke-PesterWithConfig.ps1
+    # Keep pwsh entrypoint; pass the script as a command argument
+    command: ["-File", "./scripts/testing/Invoke-PesterWithConfig.ps1"]
 
 volumes:
   gradle-cache: {}
